fix: dinamic weather icons for buttons

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,12 @@
 				style="background-image: url('temp/summer-bg.jpg')"
 				id="sunButton"
 			>
-				<img src="temp/sun.svg" class="icon" alt="Иконка" />
+				<img
+					id="sunIcon"
+					src="temp/sun.svg"
+					class="icon"
+					alt="Иконка"
+				/>
 				<audio id="sunAudio" src="temp/summer.mp3"></audio>
 			</div>
 			<div
@@ -22,6 +27,7 @@
 				id="rainButton"
 			>
 				<img
+					id="rainIcon"
 					src="temp/cloud-rain.svg"
 					class="icon"
 					alt="Иконка"
@@ -33,6 +39,7 @@
 				id="winterButton"
 			>
 				<img
+					id="winterIcon"
 					src="temp/cloud-snow.svg"
 					class="icon"
 					alt="Иконка"
