Что было не так: Конфликт правил webpack - два правила для статических файлов перекрывали друг друга Неправильное использование CopyPlugin - файлы копировались, но webpack их не знал

--- a/public/index.html
+++ b/public/index.html
@@ -3,47 +3,47 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Weather sounds</title>
-		<link rel="shortcut icon" href="temp/music.png" />
+		<link rel="shortcut icon" href="assets/music.png" />
 	</head>
 	<body>
 		<h1>Weather sounds</h1>
 		<div class="container">
 			<div
 				class="tile"
-				style="background-image: url('temp/summer-bg.jpg')"
+				style="background-image: url('assets/summer-bg.jpg')"
 				id="sunButton"
 			>
 				<img
 					id="sunIcon"
-					src="temp/sun.svg"
+					src="assets/sun.svg"
 					class="icon"
 					alt="Иконка"
 				/>
-				<audio id="sunAudio" src="temp/summer.mp3"></audio>
+				<audio id="sunAudio" src="assets/summer.mp3"></audio>
 			</div>
 			<div
 				class="tile"
-				style="background-image: url('temp/rainy-bg.jpg')"
+				style="background-image: url('assets/rainy-bg.jpg')"
 				id="rainButton"
 			>
 				<img
 					id="rainIcon"
-					src="temp/cloud-rain.svg"
+					src="assets/cloud-rain.svg"
 					class="icon"
 					alt="Иконка"
-				/><audio id="rainAudio" src="temp/rain.mp3"></audio>
+				/><audio id="rainAudio" src="assets/rain.mp3"></audio>
 			</div>
 			<div
 				class="tile"
-				style="background-image: url('temp/winter-bg.jpg')"
+				style="background-image: url('assets/winter-bg.jpg')"
 				id="winterButton"
 			>
 				<img
 					id="winterIcon"
-					src="temp/cloud-snow.svg"
+					src="assets/cloud-snow.svg"
 					class="icon"
 					alt="Иконка"
-				/><audio id="winterAudio" src="temp/winter.mp3"></audio>
+				/><audio id="winterAudio" src="assets/winter.mp3"></audio>
 			</div>
 		</div>
 		<div class="slider-container">
